header color, tamaños,color de fondo. Y seccion equipo empezar a darle estilos

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <link rel="stylesheet" href="./styles/main.css">
 </head>
 <body>
-    <header>
-        <h1>Nombre del grupo</h1>
-        <nav>
-            <ul>
-                <li>EQUIPO</li>
-                <li>QUIENES SOMOS</li>
-                <li>CONTACTO</li>
+    <header class="header">
+        <h1 class="h1">Nombre del grupo</h1>
+        <nav class="nav-header">
+            <ul class="ul-nav-cabecera">
+                <li class="link">EQUIPO</li>
+                <li class="link">QUIENES SOMOS</li>
+                <li class="link">CONTACTO</li>
             </ul>
         </nav>
     </header>
@@ -29,8 +29,8 @@
         </section>
 
         <section class="team">
-            <h2>EQUIPO</h2>
-            <p></p>
+            <h2 class="equipo">EQUIPO</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo minus laudantium hic qui architecto tempora sit expedita harum culpa quod. Quia delectus voluptatum non ipsa atque! Corrupti sit atque modi.</p>
         
         </section>
 
