Hecho hero y añadida nueva foto

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;0,500;0,700;0,900;1,300&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./styles/main.css">
 </head>
@@ -24,8 +27,7 @@
     </header>
     <main>
         <section class="hero">
-            <img src="" alt="">
-            <p></p>
+            <p class="texto-hero">  Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
         </section>
 
         <section class="team">
@@ -103,7 +105,7 @@
         </section>
     </main>
     <footer>
-        <p>Nombre del grupo c 2022</p>
+        <p>Nombre del grupo Copyright 2022</p>
         <nav>
             <ul>
                 <li><a href=""></a>EQUIPO</li>
