--- a/index.html
+++ b/index.html
@@ -6,11 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;0,500;0,700;0,900;1,300&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Rubik:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./styles/main.css">
 </head>
@@ -49,10 +45,11 @@
 
         <section class="whoiswho">
             <h2>QUIÉNES SOMOS</h2>
-            <article>
-                <img src="" alt="">
-                <h4>Nombre persona</h4>
-                <p>cositas de la persona</p>
+            <article class="complete-person">
+                <img class="img-person" src="./images/cabra.jpeg" alt="">
+                <div>
+                <h4>Laura García Cuello</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, delectus. Sunt incidunt autem recusandae fugit fugiat perferendis, earum quae, veniam, repellendus magni atque alias ipsam ab pariatur voluptatum asperiores suscipit?</p>
                 <nav>
                     <ul>
                         <li> <a href=""></a></li>
@@ -61,11 +58,13 @@
                         <li> <a href=""></a></li>
                     </ul>
                 </nav>
+            </div>
             </article>
-            <article>
-                <img src="" alt="">
-                <h4>Nombre persona</h4>
-                <p>cositas de la persona</p>
+            <article class="complete-person">
+                <img class="img-person" src="./images/cabra.jpeg" alt="">
+                <div>
+                <h4>Bella García</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis ducimus aperiam neque. Odit architecto vitae laboriosam quam dolorum provident aperiam quis iusto veniam. Minus, adipisci ipsam laudantium distinctio non cumque.</p>
                 <nav>
                     <ul>
                         <li> <a href=""></a></li>
@@ -74,11 +73,14 @@
                         <li> <a href=""></a></li>
                     </ul>
                 </nav>
+            </div>
             </article>
-            <article>
-                <img src="" alt="">
-                <h4>Nombre persona</h4>
-                <p>cositas de la persona</p>
+            <article class="complete-person">
+                <img class="img-person" src="./images/cabra.jpeg" alt="">
+                
+                <div>
+                <h4>Mónica Hidalgo Martín</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, ad, magnam nulla ea totam animi quia distinctio, quod sapiente reprehenderit inventore repellendus eos dicta perferendis obcaecati incidunt porro saepe iste.</p>
                 <nav>
                     <ul>
                         <li> <a href=""></a></li>
@@ -87,10 +89,12 @@
                         <li> <a href=""></a></li>
                     </ul>
                 </nav>
+            </div>
             </article>
-            <article>
-                <img src="" alt="">
-                <h4>Nombre persona</h4>
+            <article class="complete-person">
+                <img class="img-person" src="./images/cabra.jpeg" alt="">
+                <div>
+                <h4>Bárbara García Bolaños</h4>
                 <p>cositas de la persona</p>
                 <nav>
                     <ul>
@@ -100,6 +104,7 @@
                         <li> <a href=""></a></li>
                     </ul>
                 </nav>
+            </div>
             </article>
 
         </section>
