--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </section>
 
         <section class="team">
-            <h2 class="equipo">EQUIPO</h2>
+            <h2 id="Equipo" class="equipo">EQUIPO</h2>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo minus laudantium hic qui architecto tempora sit expedita harum culpa quod. Quia delectus voluptatum non ipsa atque! Corrupti sit atque modi.</p>
         
         </section>
@@ -48,7 +48,7 @@
         </section>
 
         <section class="whoiswho">
-            <h2>QUIÉNES SOMOS</h2>
+            <h2 id="Quienes-somos">QUIÉNES SOMOS</h2>
             <article>
                 <img src="" alt="">
                 <h4>Nombre persona</h4>
@@ -104,16 +104,18 @@
 
         </section>
     </main>
-    <footer>
-        <p>Nombre del grupo Copyright 2022</p>
-        <nav>
-            <ul>
-                <li><a href=""></a>EQUIPO</li>
-                <li><a href=""></a>QUIÉNES SOMOS</li>
-                <li><a href=""></a>CONTACTO</li>
+    <footer class="footer">
+        <div class="caja">
+            <p class="nombre-final">Nombre del grupo © 2022</p>
+            <nav>
+            <ul class="enlaces-final">
+                <li><a class="enlace1" href="./index.html#Equipo">EQUIPO</a></li>
+                <li><a class="enlace2" href="./index.html#Quienes-somos">QUIÉNES SOMOS</a></li>
+                <li><a class="enlace3" href="./contact.html"></a>CONTACTO</li>
             </ul>
-        </nav>
-        <img class="logo" src="" alt="">
+            </nav>
+            <img class="logo" src="./images/logo-adalab.png" alt="Logo Adalab">
+        </div>
     </footer>
     
 </body>
