Sección quienes somos Mobile version terminada a falta de poner los links

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Rubik:wght@500&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/2eec946f56.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./styles/main.css">
 </head>
@@ -51,11 +52,11 @@
                 <h4>Laura García Cuello</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, delectus. Sunt incidunt autem recusandae fugit fugiat perferendis, earum quae, veniam, repellendus magni atque alias ipsam ab pariatur voluptatum asperiores suscipit?</p>
                 <nav>
-                    <ul>
-                        <li> <a href=""></a></li>
-                        <li> <a href=""></a></li>
-                        <li> <a href=""></a></li>
-                        <li> <a href=""></a></li>
+                    <ul class="social-media-list">
+                        <li> <a href=""><i class="fa-brands fa-twitter"></i></a></li>
+                        <li> <a href=""><i class="fa-brands fa-linkedin-in"></i></a></li>
+                        <li> <a href=""><i class="fa-brands fa-github-alt"></i></a></li>
+                        <li> <a href=""><i class="fa-solid fa-envelope"></i></a></li>
                     </ul>
                 </nav>
             </div>
@@ -66,11 +67,11 @@
                 <h4>Bella García</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis ducimus aperiam neque. Odit architecto vitae laboriosam quam dolorum provident aperiam quis iusto veniam. Minus, adipisci ipsam laudantium distinctio non cumque.</p>
                 <nav>
-                    <ul>
-                        <li> <a href=""></a></li>
-                        <li> <a href=""></a></li>
-                        <li> <a href=""></a></li>
-                        <li> <a href=""></a></li>
+                    <ul class="social-media-list">
+                        <li> <a href=""><i class="fa-brands fa-twitter"></i></a></li>
+                        <li> <a href=""><i class="fa-brands fa-linkedin-in"></i></a></li>
+                        <li> <a href=""><i class="fa-brands fa-github-alt"></i></a></li>
+                        <li> <a href=""><i class="fa-solid fa-envelope"></i></a></li>
                     </ul>
                 </nav>
             </div>
@@ -82,11 +83,11 @@
                 <h4>Mónica Hidalgo Martín</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, ad, magnam nulla ea totam animi quia distinctio, quod sapiente reprehenderit inventore repellendus eos dicta perferendis obcaecati incidunt porro saepe iste.</p>
                 <nav>
-                    <ul>
-                        <li> <a href=""></a></li>
-                        <li> <a href=""></a></li>
-                        <li> <a href=""></a></li>
-                        <li> <a href=""></a></li>
+                    <ul class="social-media-list">
+                        <li> <a href=""><i class="fa-brands fa-twitter"></i></a></li>
+                        <li> <a href="https://www.linkedin.com/in/monica-hidalgo-martin-6654a684/"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                        <li> <a href=""><i class="fa-brands fa-github-alt"></i></a></li>
+                        <li> <a href=""><i class="fa-solid fa-envelope"></i></a></li>
                     </ul>
                 </nav>
             </div>
@@ -95,13 +96,13 @@
                 <img class="img-person" src="./images/cabra.jpeg" alt="">
                 <div>
                 <h4>Bárbara García Bolaños</h4>
-                <p>cositas de la persona</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi fuga omnis a quam iusto sapiente ab, ad mollitia culpa quae libero, veniam vel ut aperiam sit praesentium delectus soluta quidem!</p>
                 <nav>
-                    <ul>
-                        <li> <a href=""></a></li>
-                        <li> <a href=""></a></li>
-                        <li> <a href=""></a></li>
-                        <li> <a href=""></a></li>
+                    <ul class="social-media-list">
+                        <li> <a href=""><i class="fa-brands fa-twitter"></i></a></li>
+                        <li> <a href=""><i class="fa-brands fa-linkedin-in"></i></a></li>
+                        <li> <a href=""><i class="fa-brands fa-github-alt"></i></a></li>
+                        <li> <a href=""><i class="fa-solid fa-envelope"></i></a></li>
                     </ul>
                 </nav>
             </div>
