--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
 
         <section class="strengths-weaknesses">
             <article>
-                <h3>Fortalezas</h3>
-                <p></p>
+                <h3 class="caracteristicas">Fortalezas</h3>
+                <p> Lorem ipsum dolor sit amet consectetur adipiscing elit eu parturient, gravida mollis lobortis eleifend litora sociosqu volutpat dictum mus, ultricies posuere dis maecenas viverra mattis integer netus. Dictum parturient ac auctor pellentesque venenatis pulvinar posuere fusce, eleifend pharetra elementum ridiculus malesuada justo commodo habitant, accumsan torquent pretium aenean cras maecenas libero. Sociis euismod et suscipit integer nullam tincidunt libero, in taciti per odio porta egestas cras lobortis, habitant eu nulla ullamcorper phasellus dapibus.</p>
             </article>
             <article>
-                <h3>Debilidades</h3>
-                <p></p>
+                <h3 class="caracteristicas">Debilidades</h3>
+                <p class="parrafo"> Lorem ipsum dolor sit amet consectetur adipiscing elit eu parturient, gravida mollis lobortis eleifend litora sociosqu volutpat dictum mus, ultricies posuere dis maecenas viverra mattis integer netus. Dictum parturient ac auctor pellentesque venenatis pulvinar posuere fusce, eleifend pharetra elementum ridiculus malesuada justo commodo habitant, accumsan torquent pretium aenean cras maecenas libero. Sociis euismod et suscipit integer nullam tincidunt libero, in taciti per odio porta egestas cras lobortis, habitant eu nulla ullamcorper phasellus dapibus.</p>
             </article>
         </section>
 
@@ -50,7 +50,7 @@
                 <img class="img-person" src="./images/cabra.jpeg" alt="">
                 <div>
                 <h4>Laura García Cuello</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, delectus. Sunt incidunt autem recusandae fugit fugiat perferendis, earum quae, veniam, repellendus magni atque alias ipsam ab pariatur voluptatum asperiores suscipit?</p>
+                <p class="parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, delectus. Sunt incidunt autem recusandae fugit fugiat perferendis, earum quae, veniam, repellendus magni atque alias ipsam ab pariatur voluptatum asperiores suscipit?</p>
                 <nav>
                     <ul class="social-media-list">
                         <li> <a href=""><i class="fa-brands fa-twitter"></i></a></li>
