Cambios footer hero

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
     </header>
     <main>
         <section class="hero">
+            <div class="Caja-hero">
             <p class="texto-hero">  Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+        </div>
         </section>
 
         <section class="team">
@@ -117,7 +119,7 @@
             <ul class="enlaces-final">
                 <li><a class="enlace1" href="./index.html#Equipo">EQUIPO</a></li>
                 <li><a class="enlace2" href="./index.html#Quienes-somos">QUIÉNES SOMOS</a></li>
-                <li><a class="enlace3" href="./contact.html"></a>CONTACTO</li>
+                <li><a class="enlace3" href="./contact.html">CONTACTO</a></li>
             </ul>
             </nav>
             <img class="logo" src="./images/logo-adalab.png" alt="Logo Adalab">
