--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./styles/reset.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Rubik:wght@500&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/2eec946f56.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./styles/main.css">
 </head>
 <body>
     <header class="header">
-        <h1 class="h1">Nombre del grupo</h1>
+        <h1 class="h1">LEAP OF FAITH</h1>
         <nav class="nav-header">
             <ul class="ul-nav-cabecera">
                 <li class="link">EQUIPO</li>
@@ -25,7 +25,7 @@
     <main>
         <section class="hero">
             <div class="Caja-hero">
-            <p class="texto-hero">  Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+            <p class="texto-hero">  What we are. What we want to be. Make the jump. </p>
         </div>
         </section>
 
@@ -80,7 +80,6 @@
             </article>
             <article class="complete-person">
                 <img class="img-person" src="./images/cabra.jpeg" alt="">
-                
                 <div>
                 <h4>Mónica Hidalgo Martín</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, ad, magnam nulla ea totam animi quia distinctio, quod sapiente reprehenderit inventore repellendus eos dicta perferendis obcaecati incidunt porro saepe iste.</p>
