Finalización de la maquetación de la sección EQUIPO

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <section class="team">
             <h2 id="Equipo" class="equipo">EQUIPO</h2>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo minus laudantium hic qui architecto tempora sit expedita harum culpa quod. Quia delectus voluptatum non ipsa atque! Corrupti sit atque modi.</p>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo minus laudantium hic qui architecto tempora sit expedita harum culpa quod. Quia delectus voluptatum non ipsa atque! Corrupti sit atque modi.</p>
         
         </section>
 
