Finalización del rombo de separación entre las secciones de EQUIPO y FORTALEZAS

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <h2 id="Equipo" class="equipo">EQUIPO</h2>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo minus laudantium hic qui architecto tempora sit expedita harum culpa quod. Quia delectus voluptatum non ipsa atque! Corrupti sit atque modi.</p>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo minus laudantium hic qui architecto tempora sit expedita harum culpa quod. Quia delectus voluptatum non ipsa atque! Corrupti sit atque modi.</p>
-        
+            <div class="white-square"></div>
         </section>
 
         <section class="strengths-weaknesses">
