--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
     <main>
         <section class="hero">
             <div class="Caja-hero">
-            <p class="texto-hero">  What we are. What we want to be. Make the jump. </p>
+            <p class="texto-hero">MAKE THE JUMP</p>
         </div>
         </section>
 
         <section class="team">
             <h2 id="Equipo" class="equipo">EQUIPO</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo minus laudantium hic qui architecto tempora sit expedita harum culpa quod. Quia delectus voluptatum non ipsa atque! Corrupti sit atque modi.</p>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo minus laudantium hic qui architecto tempora sit expedita harum culpa quod. Quia delectus voluptatum non ipsa atque! Corrupti sit atque modi.</p>
+            <p>Cuatro coders apasionadas con lo que hacen y con infinitas ganas de aprender y mejorar con cada git push. Venimos de ramas laborales muy diversas pero nos unen las ganas de avanzar y evolucionar, aunque eso suponga dar un salto al vacío para ver qué pasa.</p>
+            <p>Estamos seguras de que el paracaídas de la programación web nos llevará a sitios maravillosos que nunca imaginamos antes de saltar. Si quieres conocernos un poco más, sigue leyendo <i class="fa-regular fa-face-smile-wink"></i></p>
             <div class="white-square"></div>
         </section>
 
@@ -89,7 +89,7 @@
                 <img class="img-person" src="./images/cabra.jpeg" alt="">
                 <div>
                 <h4>Mónica Hidalgo Martín</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, ad, magnam nulla ea totam animi quia distinctio, quod sapiente reprehenderit inventore repellendus eos dicta perferendis obcaecati incidunt porro saepe iste.</p>
+                <p>Culo inquieto por naturaleza con la constante necesidad de cambio y evolución. Esto me ha llevado a vivir varios años en diferentes países y dedicarme laboralmente a varias disciplinas. Desde locutora de radio hasta profesora de inglés. Como ves mi rama main tiene bastantes branches. Me atrae cualquier cosa que tiene que ver con la creatividad y la lógica. Ahora, la vida me ha llevado a estudiar programación web que se ha convertido en mi nueva pasión. ¿Las otras? La montaña, los animales y las fiestas de cumpleaños con disfraces.</p>
                 <nav>
                     <ul class="social-media-list">
                         <li> <a href=""><i class="fa-brands fa-twitter"></i></a></li>
