esto no funciona

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <main>
         <section class="hero">
             <div class="Caja-hero">
-            <p class="texto-hero">  What we are. What we want to be. Make the jump. </p>
+            <p class="texto-hero">  What we are.</br> What we want to be. </br>Make the jump. </p>
         </div>
         </section>
 
@@ -114,7 +114,7 @@
     </main>
     <footer class="footer">
         <div class="caja">
-            <p class="nombre-final">Nombre del grupo © 2022</p>
+            <p class="nombre-final">Leap of faith © 2022</p>
             <nav>
             <ul class="enlaces-final">
                 <li><a class="enlace1" href="./index.html#Equipo">EQUIPO</a></li>
