--- a/index.html
+++ b/index.html
@@ -39,11 +39,17 @@
         <section class="strengths-weaknesses">
             <article>
                 <h3 class="caracteristicas">Fortalezas</h3>
-                <p> Lorem ipsum dolor sit amet consectetur adipiscing elit eu parturient, gravida mollis lobortis eleifend litora sociosqu volutpat dictum mus, ultricies posuere dis maecenas viverra mattis integer netus. Dictum parturient ac auctor pellentesque venenatis pulvinar posuere fusce, eleifend pharetra elementum ridiculus malesuada justo commodo habitant, accumsan torquent pretium aenean cras maecenas libero. Sociis euismod et suscipit integer nullam tincidunt libero, in taciti per odio porta egestas cras lobortis, habitant eu nulla ullamcorper phasellus dapibus.</p>
+                <p class="parrafo"> 
+            
+                    Somos cuatro mujeres valientes, que no tenemos miedo a los cambios.
+                    Decidadas, apostamos por aquello que nos hace feliz.
+                    Con gran flexibilidad mental que nos facilita gran adaptación al cambio y al trabajo en equipo.
+                    Y por supuesto, con muchísimas ganas de aprender.
+                    </p>
             </article>
             <article>
                 <h3 class="caracteristicas">Debilidades</h3>
-                <p class="parrafo"> Lorem ipsum dolor sit amet consectetur adipiscing elit eu parturient, gravida mollis lobortis eleifend litora sociosqu volutpat dictum mus, ultricies posuere dis maecenas viverra mattis integer netus. Dictum parturient ac auctor pellentesque venenatis pulvinar posuere fusce, eleifend pharetra elementum ridiculus malesuada justo commodo habitant, accumsan torquent pretium aenean cras maecenas libero. Sociis euismod et suscipit integer nullam tincidunt libero, in taciti per odio porta egestas cras lobortis, habitant eu nulla ullamcorper phasellus dapibus.</p>
+                <p class="parrafo">  Nuestra principal debilidad sería </p>
             </article>
         </section>
 
