--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
             <article class="complete-person">
                 <img class="img-person" src="./images/cabra.jpeg" alt="">
                 <div>
-                <h4>Bella García</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis ducimus aperiam neque. Odit architecto vitae laboriosam quam dolorum provident aperiam quis iusto veniam. Minus, adipisci ipsam laudantium distinctio non cumque.</p>
+                <h4>Bella García Villegas</h4>
+                <p>Madre de 2 niñas que se ha ido reinventando a sí misma. Cuando con 37 años sabes que estas en un sector y en una empresa que no te puede ofrecer más, tienes 2 opciones: disfrutar la estabilidad que eso te proporciona o decidir que ese no es tu camino y buscar otro que te ofrezca un camino ilimitado de conocimiento y a su vez reconocimiento laboral. Es el momento del cambio, disfrutemos del camino.</p>
                 <nav>
                     <ul class="social-media-list">
                         <li> <a href=""><i class="fa-brands fa-twitter"></i></a></li>
