Imagen del Hero cambiada

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <main>
         <section class="hero">
             <div class="Caja-hero">
-            <p class="texto-hero">MAKE THE JUMP</p>
+            <p class="texto-hero">Every new challenge requires a leap in the dark</p>
         </div>
         </section>
 
