--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <h1 class="h1">LEAP OF FAITH</h1>
         <nav class="nav-header">
             <ul class="ul-nav-cabecera">
-                <li class="link"><a href="./index.html#equipo">EQUIPO</a></li>
-                <li class="link"><a href="./index.html#Quienes-somos">QUIENES SOMOS</a></li>
-                <li class="link">CONTACTO</li>
+                <li class="link"><a class="enlace-nav" href="./index.html#equipo">EQUIPO</a></li>
+                <li class="link"><a class="enlace-nav" href="./index.html#Quienes-somos">QUIENES SOMOS</a></li>
+                <li class="link"><a class="enlace-nav" href="">CONTACTO</a></li>
             </ul>
         </nav>
     </header>
