--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <ul class="ul-nav-cabecera">
                 <li class="link"><a class="enlace-nav" href="./index.html#equipo">EQUIPO</a></li>
                 <li class="link"><a class="enlace-nav" href="./index.html#Quienes-somos">QUIENES SOMOS</a></li>
-                <li class="link"><a class="enlace-nav" href="">CONTACTO</a></li>
+                <li class="link"><a class="enlace-nav" href="./contact.html">CONTACTO</a></li>
             </ul>
         </nav>
     </header>
