cambios en el texto de monica

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <img class="img-person" src="./images/cabra.jpeg" alt="">
                 <div>
                 <h4>Mónica Hidalgo Martín</h4>
-                <p>Culo inquieto por naturaleza con la constante necesidad de cambio y evolución. Esto me ha llevado a vivir varios años en diferentes países y dedicarme laboralmente a varias disciplinas. Desde locutora de radio hasta profesora de inglés. Como ves mi rama main tiene bastantes branches. Me atrae cualquier cosa que tiene que ver con la creatividad y la lógica. Ahora, la vida me ha llevado a estudiar programación web que se ha convertido en mi nueva pasión. ¿Las otras? La montaña, los animales y las fiestas de cumpleaños con disfraces.</p>
+                <p>Culo inquieto por naturaleza con la constante necesidad de cambio y evolución. Esto me ha llevado a vivir varios años en diferentes países y dedicarme laboralmente a varias disciplinas. Desde locutora de radio hasta profesora de inglés. Como ves mi rama main tiene bastantes branches. Me atrae cualquier cosa que tiene que ver con la creatividad y la lógica. Ahora la vida me ha llevado a estudiar programación web y se ha convertido en mi nueva pasión. ¿Las otras? La montaña, los animales y las fiestas de cumpleaños con disfraces.</p>
                 <nav>
                     <ul class="social-media-list">
                         <li> <a href=""><i class="fa-brands fa-twitter"></i></a></li>
