texto de debilidades

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </article>
             <article>
                 <h3 class="caracteristicas">Debilidades</h3>
-                <p class="parrafo">  Nuestra principal debilidad sería </p>
+                <p class="parrafo">Somos cuatro profesionales que vienen de campos muy distintos por lo que nuestra debilidad principal sería la falta de experiencia laboral relacionada con la programación web. Sin embargo, tenemos que decir también que estamos convencidas de que las ganas y la motivación que tenemos podrá suplir esas carencias que vienen de la falta de experiencia. </p>
             </article>
         </section>
 
