enlaces,raya footer

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <h1 class="h1">LEAP OF FAITH</h1>
         <nav class="nav-header">
             <ul class="ul-nav-cabecera">
-                <li class="link"><a class="enlace-nav" href="./index.html#equipo">EQUIPO</a></li>
+                <li class="link"><a class="enlace-nav" href="./index.html#Equipo">EQUIPO</a></li>
                 <li class="link"><a class="enlace-nav" href="./index.html#Quienes-somos">QUIENES SOMOS</a></li>
-                <li class="link"><a class="enlace-nav" href="./contact.html">CONTACTO</a></li>
+                <li class="link"><a class="enlace-nav" href="./contact.html" target="_blank">CONTACTO</a></li>
             </ul>
         </nav>
     </header>
@@ -130,6 +130,7 @@
 
         </section>
     </main>
+    <hr class="linea">
     <footer class="footer">
         <div class="caja">
             <p class="nombre-final">Leap of faith © 2022</p>
@@ -137,7 +138,7 @@
             <ul class="enlaces-final">
                 <li><a class="enlace1" href="./index.html#Equipo">EQUIPO</a></li>
                 <li><a class="enlace2" href="./index.html#Quienes-somos">QUIÉNES SOMOS</a></li>
-                <li><a class="enlace3" href="./contact.html">CONTACTO</a></li>
+                <li><a class="enlace3" href="./contact.html" target="_blank">CONTACTO</a></li>
             </ul>
             </nav>
             <img class="logo" src="./images/logo-adalab.png" alt="Logo Adalab">
