--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Rubik:wght@500&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/2eec946f56.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./styles/main.css">
+    <link rel="icon" type="image/png" href="./images/png-clipart-jumping-computer-icons-person-falling-sport-hand-thumbnail.png">
 </head>
 <body>
     <header class="header">
