--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <main>
         <section class="hero">
             <div class="Caja-hero">
-            <p class="texto-hero">  What we are.</br> What we want to be. </br>Make the jump. </p>
+            <p class="texto-hero"> What we are. What we want to be. Make the jump. </p>
         </div>
         </section>
 
