--- a/src/html/index.html
+++ b/src/html/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leap of Faith</title>
-    <link rel="stylesheet" href="./styles/reset.css">
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Rubik:wght@500&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/2eec946f56.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./styles/main.css">
-    <link rel="icon" type="image/png" href="./images/png-clipart-jumping-computer-icons-person-falling-sport-hand-thumbnail.png">
+    <link rel="stylesheet" href="./assets/css/main.css">
+    <link rel="icon" type="image/png" href="./assets/images/png-clipart-jumping-computer-icons-person-falling-sport-hand-thumbnail.png">
 </head>
 <body>
     <header class="header">
@@ -57,7 +57,7 @@
         <section  class="whoiswho">
             <h2 id="Quienes-somos">QUIÉNES SOMOS</h2>
             <article class="complete-person">
-                <img class="img-person" src="./images/cabra.jpeg" alt="">
+                <img class="img-person" src="./assets/images/cabra.jpeg" alt="">
                 <div>
                 <h4>Laura García Cuello</h4>
                 <p class="parrafo">Entusiasta por el cambio y en la búsqueda de aquello que me haga feliz. Vengo de la rama sanitatia y voy directa a la rama de la programación. Descubriendo este apasionante mundo code que se está convirtiendo en mi nueva vocación. Ilusionada con este nuevo comienzo.</p>
@@ -75,7 +75,7 @@
             </div>
             </article>
             <article class="complete-person">
-                <img class="img-person" src="./images/cabra.jpeg" alt="">
+                <img class="img-person" src="./assets/images/cabra.jpeg" alt="">
                 <div>
                 <h4>Bella García Villegas</h4>
                 <p>Madre de 2 niñas que se ha ido reinventando a sí misma. Cuando con 37 años sabes que estas en un sector y en una empresa que no te puede ofrecer más, tienes 2 opciones: disfrutar la estabilidad que eso te proporciona o decidir que ese no es tu camino y buscar otro que te ofrezca un camino ilimitado de conocimiento y a su vez reconocimiento laboral. Es el momento del cambio, disfrutemos del camino.</p>
@@ -93,7 +93,7 @@
             </div>
             </article>
             <article class="complete-person">
-                <img class="img-person" src="./images/cabra.jpeg" alt="">
+                <img class="img-person" src="./assets/images/cabra.jpeg" alt="">
                 <div>
                 <h4>Mónica Hidalgo Martín</h4>
                 <p>Culo inquieto por naturaleza con la constante necesidad de cambio y evolución. Esto me ha llevado a vivir varios años en diferentes países y dedicarme laboralmente a varias disciplinas. Desde locutora de radio hasta profesora de inglés. Como ves mi rama main tiene bastantes branches. Me atrae cualquier cosa que tiene que ver con la creatividad y la lógica. Ahora la vida me ha llevado a estudiar programación web y se ha convertido en mi nueva pasión. ¿Las otras? La montaña, los animales y las fiestas de cumpleaños con disfraces.</p>
@@ -111,7 +111,7 @@
             </div>
             </article>
             <article class="complete-person">
-                <img class="img-person" src="./images/cabra.jpeg" alt="">
+                <img class="img-person" src="./assets/images/cabra.jpeg" alt="">
                 <div>
                 <h4>Bárbara García Bolaños</h4>
                 <p>Curiosa e inquieta. A lo largo de mi vida he tocado muchos palos desde ciencias de la antigüedad hasta realización de proyectos. Puedo transformarte en un zombie viviente ,gracias a la magia del maquillaje, o dirigirte un documental de tu vida. Ahora estoy luchando para poder programarte tu próxima página web. ¿ Y de mi que puedo contarte? Estoy en contra del especismo y de todas las discriminaciones.</p>
@@ -142,7 +142,7 @@
                 <li><a class="enlace3" href="./contact.html" target="_blank">CONTACTO</a></li>
             </ul>
             </nav>
-            <img class="logo" src="./images/logo-adalab.png" alt="Logo Adalab">
+            <img class="logo" src="./assets/images/logo-adalab.png" alt="Logo Adalab">
         </div>
     </footer>
     
