--- a/src/html/index.html
+++ b/src/html/index.html
@@ -114,7 +114,7 @@
                 <img class="img-person" src="./assets/images/cabra.jpeg" alt="">
                 <div>
                 <h4>Bárbara García Bolaños</h4>
-                <p>Curiosa e inquieta. A lo largo de mi vida he tocado muchos palos desde ciencias de la antigüedad hasta realización de proyectos. Puedo transformarte en un zombie viviente ,gracias a la magia del maquillaje, o dirigirte un documental de tu vida. Ahora estoy luchando para poder programarte tu próxima página web. ¿ Y de mi que puedo contarte? Estoy en contra del especismo y de todas las discriminaciones.</p>
+                <p>Curiosa. A lo largo de mi vida he tocado muchos palos desde ciencias de la antigüedad hasta realización de proyectos. Puedo transformarte en un zombie viviente ,gracias a la magia del maquillaje, o dirigirte un documental de tu vida. Ahora estoy luchando para poder programarte tu próxima página web. ¿ Y de mi que puedo contarte? Estoy en contra del especismo y de todas las discriminaciones.</p>
                 <nav>
                     <ul class="social-media-list">
                         <li> <a href=""><i class="fa-brands fa-twitter"></i></a></li>
