finish hero-footer table-web provisional contact

--- a/src/html/contact.html
+++ b/src/html/contact.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>formulario</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Rubik:wght@500&display=swap"
+        rel="stylesheet">
+    <script src="https://kit.fontawesome.com/2eec946f56.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./assets/css/main.css">
+    <link rel="icon" type="image/png"
+        href="./assets/images/png-clipart-jumping-computer-icons-person-falling-sport-hand-thumbnail.png">
+    <title>Leap of faith-Formulario</title>
 </head>
+
 <body>
-    <h1>Hola Mundo</h1>
+    <main>
+        <include src="./partials/header.html"></include>
+        <include src="./partials/hero.html"></include>
+        <div class="provisional"></div>
+    </main>
+    <hr>
+    <include src="./partials/footer.html"></include>
 </body>
+
 </html>
