--- a/src/html/contact.html
+++ b/src/html/contact.html
@@ -18,8 +18,8 @@
 <body>
     <main>
         <include src="./partials/header.html"></include>
+        <include src="./partials/hero.html"></include>
 
-        <section class="hero"></section>
         <div class="contact__main">
             <div class="contact__page">
                 <h1 class="contact__title">Contacto</h1>
