--- a/src/html/contact.html
+++ b/src/html/contact.html
@@ -34,8 +34,8 @@
 
                 <form class="contact__form" action="/signup" method="post">
 
-                    <label class="contact__form--label" for="firstName">Nombre completo <span
-                            class="contact__asterisk">*</span></label>
+                    <label class="contact__form--label" for="firstName">Nombre completo
+                        <span class="contact__asterisk">*</span></label>
                     <input class="contact__form--input" placeholder="Nombre..." id="firstName" type="text"
                         name="firstName" required />
 
