--- a/src/html/contact.html
+++ b/src/html/contact.html
@@ -32,7 +32,8 @@
                 <small class="contact__small">Todos los campos marcados con <span class="contact__asterisk">*</span> son
                     obligatorios.</small>
 
-                <form class="contact__form" action="/signup" method="post">
+
+                <form class="contact__form" action="https://formspree.io/f/mgeqzgeo" method="post">
 
                     <label class="contact__form--label" for="firstName">Nombre completo
                         <span class="contact__asterisk">*</span></label>
